Better_Together_Landing_Page/style.css
/* BT Landing Page Style Sheet: Author Christian Arce(github:arcec-cs)
* CSS Coding Style: Google recomendation(-order of properties/short hand)- https://google.github.io/styleguide/htmlcssguide.html
* Header Font-Size Scaling: W3 Reccomendations- https://www.w3.org/TR/css-fonts-3/#font-size-prop
* Typography Grid / Vert&Horz Motion- http://webtypography.net/toc#2.2
* Font Choice(Raleway): Sans-Serif;Headspace(Apercu)- https://venngage.com/blog/brand-fonts/ ; https://designtheway.com/most-used-fonts-alternative-google-fonts/
*********************************************************************************************************************************/

/**********************************
|| GENERAL STYLES 
***********************************/
/*
Typography Grid:  
In good Typography practice, we pick a scale to keep Grid Struture consisiting of Grid Units for propper Vertical & Horizontal Rhythm to Inrease Readability:
Grid Unit = 30 px; determinied by a reccomended Line Height of 1.5 times the chosen paragraph font of 20px.

Header Font Scaling:
According to W3 Reccomendations

Vertical Rhythm Rules:
Standard Line Height- Closest Grid Unit or Half Grid Unit That is able to contian the size of the text i.e h2 = 40px therefore LH= 45 px.
Standard Vert Margins- 1 Grid Unit (30px).

Horizontial Rhythm Rules:
Paragraph Width Small- Small Paragraphs take appproximatly the lower character limit of the 45-75 char paragraph, Typography reccomended 
Paragraph Width Med- Medium Paragraphs take appproximatly the Ideal for readibily paragraph width of 66 Char, Typography reccomended 

FONT CHOICE: 
Chose Sans-Serif over a Sans for the are more modern, simpler and evoke a sense of clenliness and minimal design which aligns with BT mission.
Chose Raleway because it was similar to Aperqu a paid font that Headspace uses, Headspace has a similar mission to BT.
*/

body {
    padding-top: 90px; /*offset for cover cover down so fixed nav bar doesnt ccover it */
    margin: 0 auto;    
    color: #00473e;
    background-color: #f2f7f5;
    font-size: 1.6667em; /* 26.6666667 px to get  20px paragraphs with W3 Reccomended header Ratios*/
    font-family: 'Raleway', sans-serif;
}

/* line heights are the the closest multiple of 15px, go to 4 decimals for consistency and accuracy when looking at web inspector tool*/
h1 {
    font-size: 2em;     /*53.3334px*/
    line-height: 1.125;   /*60px*/
    margin-top: .5624em; 
    margin-bottom: .5624em;
}

h2 {
    font-size: 1.5em;     /*40px*/
    line-height: 1.125;  /*45px*/
    margin-top: .75em; 
    margin-bottom: .75em;
}

h3 {
    font-size: 1.2em;     /*32px*/
    line-height: 1.4062; /*45px*/ 
    margin-top: .9375em;
    margin-bottom: .9375em;

}

h4 {
    font-size: 1em;       /*26.6667px*/
    line-height: 1.1249; /*30px*/
    margin-top: 1.1249em;
    margin-bottom: 1.249em; 
}

p {
    font-size: .75em;     /*20px*/
    line-height: 1.5;    /*30px*/
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    color: #475d5b;
}

h5 {
    font-size: .8888 em;   /*23.7013 px*/
    line-height: 1.2657;   /*30px*/
    margin-top: 1.2657em;
    margin-bottom: 1.2657em;
}

h6 {
    font-size: .5em; /*13.3333px*/
    line-height: 2.25em; /*30px*/
    margin-top: 2.25em;
    margin-bottom: 2.25em;
}

a {
    color:#00473e; 
    text-decoration: none;
    font-size: .75em; /*20px*/
}

.p-small {
    width: 19.5em; /*1em is 20 px */
}

.p-med {
    width: 30em;
}

a:visited {
    color: inherit; /*keep anchor tags same color when navagating*/
}

/* Having a Universal Class For Padding(acting as margins so we can still apply bg-color)which we apply to ALL ZONES 
makes it easier to manipuate for media queries and reduces redunancy and Helps Horz Motion Thus readability; Note: 1.125em =30px, see Zones */
.universal-lr-padding {
    padding-left: 12.375em ; /* correspond with the Navbar word Better Together  which is 165px away from left edge*/
    padding-right: 6.1875em ;
    padding-right: 12.375em ;
}

/**********************************
|| NAVBAR 
***********************************/
/* Holds The Logo, Anchor Tags Linking to different Zones of Landing Page, and Login & Register Buttons */

.main-nav {
    background-color: #f2f7f5;
    height: 3.3em; /* 3.375 = 90px - border 2px (.075em) */
    list-style: none;
    border-radius: 4px;
    border: 1px solid #bbb;
    margin: 0;
    padding: 0em 5.625em 0em 5.625em;
}

.main-nav:hover {
    box-shadow: rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }

.main-nav >li {
    padding: .5625em 1.125em; /* top and bottom to accomidate button alignment*/
    margin-top: .525em; /*14 px margin to make room for container border of 1 px 14 + 1 = 15*/
    margin-bottom: .525em;
    border-width: 1px;/* creates anhor tag separators*/
    border-right: 1px; 
    border: solid #00473e;
    border-width: 0 1px 0 0;
  }

.sticky {
    height: 3.375em;
    position: fixed;
    top: 0;
    width: 100%;
}

.push {
    margin-left: auto;
}

.nav-logo-resize {
    margin-top: .45em; /*9px to center align logo verticaly to the navbar */
    height: 2.25em;
    width: 4.5em;
}

.nav-special {
    padding-top: 0 !important;    /*special elements are already the size of anchor elements w/ padding*/
    padding-bottom: 0 !important; 
    margin-top: 0.6em !important; /*accomidates button border of 2px for alingment with anchor text in parent container*/ 
    height: auto !important;
    border-width: 0 !important; /*gets rid of  border applied in parent container since  it is only needed for the nav elements*/ 
}

.no-border {
    border-width: 0 !important; /* used for nav bar "Better Together since  the box model is consistent with main anchor tags */
}

.nav-border-left {
    border-width: 0 1px 0 1px !important; /*completes anchor border*/
}

#tagline {
    font-size: .4219em;
    text-align: center;
}
/* ... */

